サブタイトルをボールドに

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
     span.price {
       font-weight: bold;
     }
+    article p.subtitle {
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
